Fix word wrap in email log display

--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -152,7 +152,7 @@ p.copyright {
 }
 
 .email-display {
-    word-break: break-all;
+    word-break: normal;
 }
 
 .grouped-button-pad {
